# Game-Project-Interstellor

./: README.md
GameInterstellor/: CMakeLists.txt
GameInterstellor/Interstellor/: Animation.cpp  Animation.h  CMakeLists.txt  Enemies.h  EnemiesCondition.h  Textures.h  Timer.h  classAlienship.h  classBullet.h  classEntity.h  classPlayer.h  classStones.h  main.cpp  map.h
GameInterstellor/road map/: Roadmap игры Interstailor.xlsx
